# 2d-top-down-controller

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
assets/Map/: Level.json  awd.tsx  learn_tiled.tiled-session  test.xml  untitled.tmx  world.ogmo
assets/levels/: TBN.tiled-session
assets/levels/maps/: test_map.tmx
assets/levels/tilesets/: metal.tsx
assets/map/: guns.tsx  metal.tsx  platform.tsx  test_level.tiled-session  test_level.tmx  test_tileset.tsx  waltuh.tsx
assets/shaders/: door.wgsl  player.wgsl
assets/textures/: Tileset.aseprite  icon.aseprite
assets/textures/placeholders/: topdown.aseprite
assets/textures/tilesets/: guns.tsx.aseprite  metal.tsx.aseprite
assets/textures/unused/: face.aseprite  guns.aseprite
derive/: Cargo.toml
derive/src/: lib.rs
src/: debug.rs  laser.rs  lib.rs  main.rs  mouse_cache.rs  sector.rs  view_cone.rs  world.rs
src/characters/: controller.rs  other_character.rs  player.rs
src/debug/: camera_zoom.rs  fps_overlay.rs  window_esc.rs
src/objects/: characters.rs  door.rs  entities.rs
src/objects/characters/: controller.rs  other_character.rs  player.rs
src/objects/characters/player/: player_shader.rs
src/objects/door/: door_shader.rs
src/objects/entities/: door.rs
src/objects/entities/door/: door_shader.rs
src/physics/: layers.rs
src/world/: geometry.rs  level.rs  level_loader.rs  level_loader_entities.rs
