[package]
name = "topdown_controller_2d"
version = "0.1.0"
edition = "2024"

[dependencies]
asefile = "0.3.8"
avian2d = { version = "0.5" }
bevy = { version = "0.18.0", features = ["bevy_window", "bevy_winit", "dynamic_linking"] }
derive = { version = "0.1.0", path = "derive" }
image = "0.25.9"
winit = "0.30.12"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Uncomment this block if compiling for wasm
#
# # Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
# [profile.wasm-release]
# # Default to release profile values.
# inherits = "release"
# # Optimize with size in mind (also try "z", sometimes it is better).
# # Slightly slows compile times, great improvements to file size and runtime performance.
# opt-level = "s"
# # Strip all debugging information from the binary to slightly reduce file size.
# strip = "debuginfo"
